styles.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

body {
    background-color: rgb(135, 134, 134);
    overflow: hidden; /* Disable overall scrolling */
    margin: 0;
    height: 100vh;
    display: flex;
    flex-direction: column;
}

header {
    text-align: left;
    height: 100px;
    padding-left: 30px;
    padding-top: 30px;
}

.header-border {
    border: 1px solid rgb(208, 199, 194);
    padding-left: 20px;
    max-width: 1300px;
}

.title {
    font-size: 30px;
    font-weight: 400;
    font-family: "Montserrat";
    color: white;
    margin-bottom: -5px;
}

.subtitle {
    font-size: 20px;
    font-weight: 200;
    font-family: "Montserrat";
    color: white;
    margin-left: 7.5px;
}

.wrapper-class {
    display: flex;
    flex-grow: 1;
    justify-content: center;
    align-items: center;
    padding: 30px;
}

.visualization-container {
    display: flex;
    width: 95%;
    max-width: 1600px;
    height: 85%;
}

.poetry-column {
    flex: 1.5;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 20px;
    overflow-y: auto; /* Enable scrolling within the poetry columns */
    scrollbar-width: thin;
    -webkit-overflow-scrolling: touch;
}

.poetry-column.left {
    text-align: right;
    padding-right: 40px;
    margin-right: 20px;
}

.poetry-column.right {
    text-align: left;
    padding-left: 40px;
    margin-left: 20px;
}

.bubble-chart-container {
    flex: 2; /* Takes up more space in the middle */
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 10;
    min-width: 300px;
    min-height: 300px;
}

#bubble-chart-container svg {
    width: 100%;
    height: auto;
    max-height: 100%; /* Adjust max height to fit container */
}

.verse {
    font-size: 1em;
    line-height: 1.4;
    list-style-type: none;
    padding: 15px 0;
    font-weight: 300;
    text-align: center;
    font-family: "Montserrat";
    color: white;
    margin: 10px 0;
    width: 260px; /* Fixed width for all verses */
    box-sizing: border-box; /* Include padding and border in the width */
}

.line-i {
    font-size: 0.9em;
    font-style: italic;
    font-weight: bold;
    margin-bottom: 5px;
}

.line {
    margin-bottom: 2px;
}

.active-verse {
    border: 1px solid white;
    border-radius: 5px;
    padding: 10px;
}

.active-verse .line {
    color: rgb(70, 69, 69);
}

.active-line {
    color: #ffffff;
    font-weight: bold;
}

footer {
    display: flex;
    justify-content: center;
    padding: 10px 0;
    background-color: rgba(70, 69, 69, 0.8);
}

.arrow-button {
    padding: 8px 16px;
    margin: 0 8px;
    font-size: 1em;
    cursor: pointer;
    background-color: rgb(208, 199, 194);
    color: rgb(70, 69, 69);
    border: none;
    border-radius: 5px;
}

.arrow-button:hover {
    background-color: #ddd;
}

.button {
    padding: 8px 16px;
    margin: 0 40px;
    font-size: 1em;
    font-family: "Montserrat";
    background-color: rgb(208, 199, 194);
    color: rgb(70, 69, 69);
    border: none;
    border-radius: 5px;
}

.site-title {
    font-family: "Montserrat";
    color: white;
    margin-bottom: -70px;
    margin-left: 1em;
    border: solid white 1px;
    border-radius: 5px;
    padding: 5px;
    padding-left: 20px;
    width: 395px;
}

